--- a/custom_components/hyxi_cloud/translations/fr.json
+++ b/custom_components/hyxi_cloud/translations/fr.json
@@ -3,7 +3,7 @@
     "step": {
       "user": {
         "title": "Connexion à HYXi Cloud",
-        "description": "Entrez vos identifiants Open API. Vous pouvez les générer sur https://open.hyxicloud.com/",
+        "description": "Entrez vos identifiants Open API de https://open.hyxicloud.com/",
         "data": {
           "access_key": "Clé d'accès (AK)",
           "secret_key": "Clé secrète (SK)"
@@ -17,6 +17,25 @@
     },
     "abort": {
       "already_configured": "Ce compte HYXi est déjà configuré."
+    }
+  },
+  "entity": {
+    "sensor": {
+      "batsoc": { "name": "SOC Batterie" },
+      "pbat": { "name": "Puissance batterie" },
+      "ppv": { "name": "Puissance solaire" },
+      "home_load": { "name": "Charge domestique" },
+      "grid_import": { "name": "Importation réseau" },
+      "grid_export": { "name": "Exportation réseau" },
+      "bat_charging": { "name": "Charge de la batterie" },
+      "bat_discharging": { "name": "Décharge de la batterie" },
+      "totale": { "name": "Rendement total" },
+      "bat_charge_total": { "name": "Charge totale batterie" },
+      "bat_discharge_total": { "name": "Décharge totale batterie" },
+      "batsoh": { "name": "SOH Batterie" },
+      "tinv": { "name": "Température de l'onduleur" },
+      "collecttime": { "name": "Dernière mise à jour des données" },
+      "last_seen": { "name": "Dernière synchro cloud" }
     }
   }
 }
