Add binary sensor for cloud connectivity status

--- a/custom_components/hyxi_cloud/translations/de.json
+++ b/custom_components/hyxi_cloud/translations/de.json
@@ -21,6 +21,11 @@
   },
   "entity": {
     "sensor": {
+      "binary_sensor": {
+      "connectivity": {
+        "name": "Cloud-Status"
+      }
+    },
       "batsoc": { "name": "Batterie Ladezustand" },
       "pbat": { "name": "Batterieleistung" },
       "ppv": { "name": "Solarleistung" },
