--- a/custom_components/hyxi_cloud/translations/nl.json
+++ b/custom_components/hyxi_cloud/translations/nl.json
@@ -3,7 +3,15 @@
     "step": {
       "user": {
         "title": "Verbinden met HYXi Cloud",
-        "description": "Voer uw Open API-inloggegevens in. U kunt deze genereren via {link}",
+        "description": "Voer uw Open API-inloggegevens in. U kunt deze genereren op het [HYXiPOWER Developer Platform]({link}).",
+        "data": {
+          "access_key": "Toegangssleutel (AK)",
+          "secret_key": "Geheime sleutel (SK)"
+        }
+      },
+      "reauth_confirm": {
+        "title": "HYXi Cloud opnieuw verifiëren",
+        "description": "Uw toegangssleutel of geheime sleutel is niet langer geldig. Voer uw nieuwe inloggegevens in om de monitoring te hervatten. U vindt deze op het [HYXiPOWER Developer Platform]({link}).",
         "data": {
           "access_key": "Toegangssleutel (AK)",
           "secret_key": "Geheime sleutel (SK)"
@@ -11,36 +19,37 @@
       }
     },
     "error": {
-      "cannot_connect": "Kan geen verbinding maken met HYXi-servers",
-      "invalid_auth": "Ongeldige Toegangssleutel of Geheime sleutel",
-      "unknown": "Er is een onverwachte fout opgetreden"
+      "cannot_connect": "Verbinding met HYXi-servers mislukt",
+      "invalid_auth": "Ongeldige toegangssleutel of geheime sleutel",
+      "unknown": "Onverwachte fout opgetreden"
     },
     "abort": {
       "already_configured": "Dit HYXi-account is al geconfigureerd."
     }
   },
   "entity": {
-    "sensor": {
-      "binary_sensor": {
+    "binary_sensor": {
       "connectivity": {
         "name": "Cloud-status"
       }
     },
-      "batsoc": { "name": "Batterij laadstatus" },
+    "sensor": {
+      "batsoc": { "name": "Batterij-laadstatus (SoC)" },
       "pbat": { "name": "Batterijvermogen" },
-      "ppv": { "name": "Zonnestroom" },
+      "ppv": { "name": "Zonne-energievermogen" },
       "home_load": { "name": "Huisverbruik" },
-      "grid_import": { "name": "Stroomafname (net)" },
-      "grid_export": { "name": "Teruglevering (net)" },
-      "bat_charging": { "name": "Batterij opladen" },
+      "grid_import": { "name": "Netimport" },
+      "grid_export": { "name": "Netexport" },
+      "bat_charging": { "name": "Batterij laden" },
       "bat_discharging": { "name": "Batterij ontladen" },
-      "totale": { "name": "Totale energieopbrengst" },
+      "totale": { "name": "Totale opbrengst" },
       "bat_charge_total": { "name": "Totale batterijlading" },
-      "bat_discharge_total": { "name": "Totale batterijontlading" },
-      "batsoh": { "name": "Batterij gezondheid" },
-      "tinv": { "name": "Omvormer temperatuur" },
-      "collecttime": { "name": "Tijd van gegevensverzameling" },
-      "last_seen": { "name": "Laatste cloud-synchronisatie" }
+      "bat_discharge_total": { "name": "Totale batterij-ontlading" },
+      "batsoh": { "name": "Batterijgezondheid (SoH)" },
+      "tinv": { "name": "Omvormertemperatuur" },
+      "collecttime": { "name": "Data verzameltijd" },
+      "last_seen": { "name": "Laatste cloud-sync" },
+      "last_updated": { "name": "Integratie laatst bijgewerkt" }
     }
   }
 }
