--- a/custom_components/hyxi_cloud/translations/fr.json
+++ b/custom_components/hyxi_cloud/translations/fr.json
@@ -2,16 +2,16 @@
   "config": {
     "step": {
       "user": {
-        "title": "Connexion au Cloud HYXi",
-        "description": "Saisissez vos identifiants Open API. Vous pouvez les générer sur la [Plateforme Développeur HYXiPOWER]({link}).",
+        "title": "Se connecter à HYXi Cloud",
+        "description": "Entrez vos identifiants Open API. Vous pouvez les générer sur la [Plateforme Développeur HYXiPOWER]({link}).",
         "data": {
           "access_key": "Clé d'accès (AK)",
           "secret_key": "Clé secrète (SK)"
         }
       },
       "reauth_confirm": {
-        "title": "Ré-authentifier le Cloud HYXi",
-        "description": "Votre clé d'accès ou votre clé secrète n'est plus valide. Veuillez saisir vos nouveaux identifiants pour reprendre le suivi. Vous les trouverez sur la [Plateforme Développeur HYXiPOWER]({link}).",
+        "title": "Réauthentifier HYXi Cloud",
+        "description": "Votre clé d'accès ou clé secrète n'est plus valide. Veuillez saisir vos nouveaux identifiants pour reprendre la surveillance solaire. Vous pouvez les trouver sur la [Plateforme Développeur HYXiPOWER]({link}).",
         "data": {
           "access_key": "Clé d'accès (AK)",
           "secret_key": "Clé secrète (SK)"
@@ -21,10 +21,22 @@
     "error": {
       "cannot_connect": "Échec de la connexion aux serveurs HYXi",
       "invalid_auth": "Clé d'accès ou clé secrète invalide",
-      "unknown": "Une erreur inattendue est survenue"
+      "unknown": "Une erreur inattendue s'est produite"
     },
     "abort": {
-      "already_configured": "Ce compte HYXi est déjà configuré."
+      "already_configured": "Ce compte HYXi est déjà configuré.",
+      "reauth_successful": "La réauthentification a réussi"
+    }
+  },
+  "options": {
+    "step": {
+      "init": {
+        "title": "Configuration du système HYXi",
+        "description": "Configurez les fonctionnalités optionnelles pour votre système HYXi.",
+        "data": {
+          "enable_virtual_battery": "Activer la batterie virtuelle agrégée (Nécessite 2+ batteries)"
+        }
+      }
     }
   },
   "entity": {
@@ -34,22 +46,29 @@
       }
     },
     "sensor": {
-      "batsoc": { "name": "État de charge de la batterie" },
+      "batsoc": { "name": "Niveau de charge de la batterie" },
       "pbat": { "name": "Puissance de la batterie" },
       "ppv": { "name": "Puissance solaire" },
-      "home_load": { "name": "Consommation maison" },
-      "grid_import": { "name": "Importation réseau" },
-      "grid_export": { "name": "Exportation réseau" },
-      "bat_charging": { "name": "Charge batterie" },
-      "bat_discharging": { "name": "Décharge batterie" },
-      "totale": { "name": "Production totale d'énergie" },
-      "bat_charge_total": { "name": "Charge totale batterie" },
-      "bat_discharge_total": { "name": "Décharge totale batterie" },
+      "home_load": { "name": "Consommation du domicile" },
+      "grid_import": { "name": "Importation du réseau" },
+      "grid_export": { "name": "Exportation vers le réseau" },
+      "bat_charging": { "name": "Charge de la batterie" },
+      "bat_discharging": { "name": "Décharge de la batterie" },
+      "totale": { "name": "Rendement énergétique total" },
+      "bat_charge_total": { "name": "Charge totale de la batterie" },
+      "bat_discharge_total": { "name": "Décharge totale de la batterie" },
       "batsoh": { "name": "État de santé de la batterie" },
       "tinv": { "name": "Température de l'onduleur" },
       "collecttime": { "name": "Heure de collecte des données" },
-      "last_seen": { "name": "Dernière synchro cloud" },
-      "last_updated": { "name": "Dernière mise à jour intégration" }
+      "last_seen": { "name": "Dernière synchronisation cloud" },
+      "integration_last_updated": { "name": "Dernière mise à jour de l'intégration" },
+      "battery_system_avg_soc": { "name": "Niveau de charge moyen du système" },
+      "battery_system_avg_soh": { "name": "État de santé moyen du système" },
+      "battery_system_total_pbat": { "name": "Puissance de la batterie du système" },
+      "battery_system_bat_charging": { "name": "Charge de la batterie du système" },
+      "battery_system_bat_discharging": { "name": "Décharge de la batterie du système" },
+      "battery_system_bat_charge_total": { "name": "Charge totale de la batterie du système" },
+      "battery_system_bat_discharge_total": { "name": "Décharge totale de la batterie du système" }
     }
   }
 }
